--- a/client/index.jade
+++ b/client/index.jade
@@ -23,5 +23,7 @@ html(ng-app='collectivist', lang='en')
     script(src='/vendor/underscore/underscore.js')
     script(src='/index.js')
     script(src='/views/home/home.js')
+    script(src='/views/makeForm/makeForm.js')
     script(src='/components/home.js')
+    script(src='/components/makeForm.js')
 
