--- a/client/index.jade
+++ b/client/index.jade
@@ -24,6 +24,8 @@ html(ng-app='collectivist', lang='en')
     script(src='/index.js')
     script(src='/views/home/home.js')
     script(src='/views/makeForm/makeForm.js')
+    script(src='/views/results/results.js')
     script(src='/components/home.js')
     script(src='/components/makeForm.js')
+    script(src='/components/results.js')
 
