--- a/client/index.less
+++ b/client/index.less
@@ -2,3 +2,14 @@ body{
   background-color: #white;
 }
 
+.buddha{
+  background-color: #FCF91E;
+}
+
+.bozo{
+  background-color: #FC1ED0;
+}
+
+.last{
+  border: 3px solid black;
+}
